clean migrations
